<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layoutMargin"
    android:gravity="bottom"
    android:theme="@style/Theme.MyCalculator.Custom"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_first"
        style="@style/myTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_operation"
        style="@style/myTextView"  />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_second"
        style="@style/myTextView"  />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/myButton"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/myButton"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/myButton"
            android:text="@string/button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            style="@style/myButton"
            android:text="@string/button_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/myButton"
            android:text="@string/button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/myButton"
            android:text="@string/button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/myButton"
            android:text="@string/button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_addition"
            style="@style/myButton"
            android:text="@string/button_addition" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/myButton"
            android:text="@string/button_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/myButton"
            android:text="@string/button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/myButton"
            android:text="@string/button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_subtraction"
            style="@style/myButton"
            android:text="@string/button_subtraction" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/myButton"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiplication"
            style="@style/myButton"
            android:text="@string/button_multiplication" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            style="@style/myButton"
            android:text="@string/button_division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_answer"
            style="@style/myButton"
            android:text="@string/button_answer" />

    </GridLayout>
</LinearLayout>